--- a/.babelrc
+++ b/.babelrc
@@ -4,10 +4,7 @@
       "@babel/preset-env",
       {
         "targets": {
-          "browsers": [
-            "last 5 versions",
-            "ie >= 11"
-          ],
+          "browsers": ["last 5 versions", "ie >= 11"],
           "node": "8.9.3"
         },
         "modules": false
@@ -17,9 +14,7 @@
   ],
   "env": {
     "testing": {
-      "plugins": [
-        "babel-plugin-dynamic-import-node"
-      ],
+      "plugins": ["babel-plugin-dynamic-import-node"],
       "presets": [
         [
           "@babel/preset-env",
@@ -30,10 +25,7 @@
       ]
     },
     "production": {
-      "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
-      ],
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
       "plugins": [
         [
           "babel-plugin-styled-components",
@@ -48,10 +40,7 @@
       ]
     },
     "development": {
-      "presets": [
-        "@babel/preset-env",
-        "@babel/preset-react"
-      ],
+      "presets": ["@babel/preset-env", "@babel/preset-react"],
       "plugins": [
         [
           "babel-plugin-styled-components",
@@ -65,6 +54,12 @@
           "@babel/plugin-transform-runtime",
           {
             "regenerator": true
+          }
+        ],
+        [
+          "transform-inline-environment-variables",
+          {
+            "include": ["NODE_ENV"]
           }
         ],
         "@babel/plugin-proposal-object-rest-spread",
