--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node": ">=8.9.3"
   },
   "scripts": {
-    "test": "cross-env NODE_ENV=testing && jest",
+    "test": "cross-env NODE_ENV=test && jest",
     "test:update": "npm run test -- -u",
     "test:coverage": "jest --coverage --runInBand",
     "start": "npm run dev",
@@ -24,7 +24,8 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "axios": "^0.18.0",
-    "babel-jest": "^23.4.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "23.6.0",
     "babel-polyfill": "^6.26.0",
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "^1.5.0",
@@ -32,7 +33,7 @@
     "favicons-webpack-plugin": "0.0.9",
     "grid-styled": "^4.0.0",
     "history": "^4.7.2",
-    "jest": "22.4.4",
+    "jest": "23.6.0",
     "jest-junit": "5.0.0",
     "jest-localstorage-mock": "2.2.0",
     "jest-mock-axios": "^2.1.11",
@@ -91,9 +92,6 @@
     "webpack": "3.9.1",
     "webpack-dev-server": "2.9.1",
     "webpack-node-externals": "^1.7.2"
-  },
-  "resolutions": {
-    "babel-core": "^7.0.0-bridge"
   },
   "jest": {
     "verbose": true,
