--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "enzyme": "3.2.0",
     "enzyme-adapter-react-16": "^1.5.0",
     "enzyme-to-json": "3.3.0",
+    "express": "^4.16.4",
     "favicons-webpack-plugin": "0.0.9",
     "grid-styled": "^4.0.0",
     "history": "^4.7.2",
