--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "start": "npm run dev",
     "lint": "eslint ./src --fix",
     "check": "npm run lint && npm run test",
+    "start:server": "node ./src/index.js",
     "dev": "webpack-dev-server --port 3002 --inline --hot",
     "build": "cross-env NODE_ENV=production & webpack"
   },
