--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-prettier": "^2.2.0",
     "eslint-plugin-react": "^6.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
     "help": "^3.0.2",
     "html-loader": "^0.5.5",
@@ -92,7 +92,7 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.9",
-    "webpack": "3.9.1",
+    "webpack": "^2.3.3",
     "webpack-dev-server": "2.9.1",
     "webpack-node-externals": "^1.7.2"
   },
